fix Jenny's favorite overflow bug
git-svn-id: http://feed-on-feeds.googlecode.com/svn/trunk@19 a5d648f4-9e1a-0410-98de-79dcf2039bee

--- a/fof.css
+++ b/fof.css
@@ -156,6 +156,7 @@ body
 	margin: 10px;
 	margin-bottom: 20px;
 	clear: both;
+	overflow: hidden;
 }
 
 .item.selected
